--- a/[ITEM]/.HOW_TO_ADD_ITEM.md
+++ b/[ITEM]/.HOW_TO_ADD_ITEM.md
@@ -1,1 +1,8 @@
+# If you're using "ox_inventory"
+## To add the item
+Place the content of "ox_inventory.md" in "ox_inventory/data/items.lua"
+## To add the picture
+Place "fixkit.png" in "ox_inventory/web/images/".
 
+Reboot the server or make this command in your console to add the item :
+ensure ox_inventory
