.HOW_TO_ADD_ITEM.md

--- a/[ITEM]/.HOW_TO_ADD_ITEM.md
+++ b/[ITEM]/.HOW_TO_ADD_ITEM.md
@@ -1,8 +1,20 @@
+# 🟦⬜🟥 | Français
+# Si vous utilisez "ox_inventory"
+## Pour ajouter l'item
+Placez le contenu de `ox_inventory.txt` dans `ox_inventory/data/items.lua`
+## Pour ajouter l'image
+Placez `fixkit.png` dans `ox_inventory/web/images/`.
+
+Redémarrez le serveur ou faites cette commande dans votre console pour ajouter l'item :
+`ensure ox_inventory`
+
+
+# English (sorry, I didn't find an emoji)
 # If you're using "ox_inventory"
 ## To add the item
-Place the content of "ox_inventory.md" in "ox_inventory/data/items.lua"
+Place the content of `ox_inventory.txt` in `ox_inventory/data/items.lua`
 ## To add the picture
-Place "fixkit.png" in "ox_inventory/web/images/".
+Place `fixkit.png` in `ox_inventory/web/images/`.
 
 Reboot the server or make this command in your console to add the item :
-ensure ox_inventory
+`ensure ox_inventory`
